<resources>
    <string name="app_name">FLY.AY</string>
    <string name="title_app">FLY.AY</string>
    <string name="subtitle_app">Fully Live Your Academic Year</string>
    <string name="input_name">Name</string>
    <string name="input_username">Username</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_confirm_password">Confirm password</string>
    <string name="login">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="rememberMe">Remember me</string>
    <string name="go_to_signup">I am new here!</string>
    <string name="home_icon">Home</string>
    <string name="search_icon">Search</string>
    <string name="list_icon">To do</string>
    <string name="add_event_icon">Add Event</string>
    <string name="profile_icon">Profile</string>
    <string name="action_options">Options</string>
    <string name="home_options">Calendar</string>
    <string name="new_list">New list</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="alph_sort">Alphabetical order</string>
    <string name="check_all">(Un)Check all</string>
    <string name="save_as_model">Save as model</string>
    <string name="delete_after">Delete after</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="app_label">Search</string>
    <string name="search_hint_name">Which event are you looking for?</string>
    <string name="search_hint_place">In which place?</string>
    <string name="search_hint_category">In which category?</string>
    <string name="title_add_event">Insert the title</string>
    <string name="category_add_event">Choose the category:</string>
    <string name="date_add_event">Choose the date:</string>
    <string name="periodic_event">Periodic event</string>
    <string name="over_range">Over range</string>
    <string name="exam_difficulty">Exam difficulty</string>
    <string name="note">Note</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Errors -->
    <string name="username_null_error">username cannot be empty</string>
    <string name="password_null_error">password cannot be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
