<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/home_icon"
        android:id="@+id/home"
        android:icon="@drawable/ic_home_page"
        app:itemIconTint="#111111" />
    <item
        android:title="@string/search_icon"
        android:id="@+id/lens"
        android:icon="@drawable/ic_search"
        app:itemIconTint="#111111"/>
    <item
        android:title="@string/add_event_icon"
        android:id="@+id/plus"
        android:icon="@drawable/ic_add_event"
        app:itemIconTint="#111111"/>
    <item
        android:title="@string/list_icon"
        android:id="@+id/list"
        android:icon="@drawable/ic_to_do"
        app:itemIconTint="#111111"/>
    <item
        android:title="@string/profile_icon"
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        app:itemIconTint="#111111"/>

</menu>