<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_options"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_options"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item
        android:id="@+id/home_options"
        android:icon="@drawable/ic_calendar"
        android:title="@string/home_options"
        app:showAsAction="always"/>
    <item
        android:id="@+id/new_todo"
        android:icon="@drawable/ic_newlist"
        android:title="@string/new_list"
        app:showAsAction="always"/>



</menu>


