<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/title_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleApp"
            android:textColor="#64C261" android:layout_centerHorizontal="true" android:textSize="36sp"
            android:layout_marginTop="60dp" android:textStyle="bold"/>

    <TextView
            android:text="@string/subtitle_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subtitleApp"
            android:textColor="#BF61C2" android:layout_centerHorizontal="true" android:textSize="24sp"
            android:layout_marginTop="110dp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/input_username"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:layout_marginTop="240dp"
            android:ems="10"
            android:id="@+id/username"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/input_password"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:layout_marginTop="290dp"
            android:ems="10"
            android:id="@+id/password"/>
    <CheckBox android:id="@+id/rememberMe"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/rememberMe"
              android:layout_marginTop="370dp"
              android:layout_marginLeft="80dp"
    />
    <Button
            android:text="@string/login"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/buttonLogin"
            android:layout_marginTop="440dp"
            android:background="#BF61C2" android:textColor="#64C261" android:textSize="18sp"/>
</RelativeLayout>