<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignUpActivity">

<include
        layout="@layout/title_bar"
        android:id="@+id/includedLayout"
        />

<EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/input_name"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:id="@+id/name"/>
<EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/input_username"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:id="@+id/username"/>
<EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/input_email"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:id="@+id/email"/>
<EditText
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/input_password"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    android:textSize="22sp"
    android:layout_marginTop="350dp"
    android:ems="10"
    android:id="@+id/password"/>
<EditText
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/input_confirm_password"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    android:textSize="22sp"
    android:layout_marginTop="400dp"
    android:ems="10"
    android:id="@+id/confirm_password"/>
<Button
    android:id="@+id/buttonSignUp"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="500dp"
    android:background="@color/greenApp"
    android:shadowColor="#000000"
    android:shadowRadius="1"
    android:text="@string/sign_up"
    android:textColor="#FFFFFF"
    android:textSize="18sp" />
</RelativeLayout>