<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.flam.flyay.ui.home.HomeFragment"
        android:label="@string/home_icon"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.flam.flyay.ui.profile.ProfileFragment"
        android:label="@string/profile_icon"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_add_event"
        android:name="com.flam.flyay.ui.addevent.AddEventFragment"
        android:label="@string/add_event_icon"
        tools:layout="@layout/fragment_add_event" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.flam.flyay.ui.todo.ToDoFragment"
        android:label="List"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.flam.flyay.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search" />
</navigation>