<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:id="@+id/touchInterceptor"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/includedLayout"
        layout="@layout/title_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:focusable="true"
        android:focusableInTouchMode ="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_username"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:layout_marginBottom="-8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        app:endIconMode="password_toggle"
        android:focusable="true"
        android:focusableInTouchMode ="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/input_password"
            android:layout_marginBottom="-8dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberMe"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="55dp" />

    <Button
        android:text="@string/login"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonLogin"
        android:layout_marginTop="370dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:shadowColor="#000000"
        android:shadowRadius="1"/>

    <TextView
        android:text="@string/go_to_signup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="60dp"
        android:ems="10"/>

    <Button
        android:text="@string/sign_up"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonSignUp"
        android:layout_marginTop="480dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:shadowColor="#000000"
        android:shadowRadius="1"/>
</RelativeLayout>