<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/search_form">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/whichEventLayout"
        android:textSize="16sp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:focusable="true"
        android:focusableInTouchMode ="true"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/whichEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_hint_name"
            android:textSize="16sp"
            android:layout_marginBottom="-8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/search_hint_category"
        android:textSize="16dp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="140dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:id="@+id/buttonCategoriesGroups">

        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/whereEventLayout"
        android:textSize="16sp"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:focusable="true"
        android:focusableInTouchMode ="true"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/whereEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_hint_place"
            android:textSize="16sp"
            android:layout_marginBottom="-8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:text="Search"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonSearch"
        android:layout_marginTop="320dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:shadowColor="#000000"
        android:shadowRadius="1"/>

</RelativeLayout>

